# Webscraper_Medalhao_Microsservicos_MinIO_CICD_AWS

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  README.md
.github/workflows/: ci-frontend.yml  ci-ingestion.yml  ci-processing.yml  deploy-aws.yml
aws_infrastructure/: README.md  ecs.tf  eventbridge.tf  iam.tf  main.tf  provider.tf  s3.tf  variables.tf
docs/: passo_a_passo_fase_1.md  passo_a_passo_fase_2.md  passo_a_passo_fase_3.md  passo_a_passo_fase_4.md
frontend_service/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
frontend_service/app/: main.py
frontend_service/app/core/: config.py
frontend_service/app/services/: search_engine.py
frontend_service/tests/: test_search.py
ingestion_service/: .bumpversion.cfg  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  architecture.md  docker-compose.yml  pyproject.toml
ingestion_service/app/: main.py
ingestion_service/app/api/: routes.py
ingestion_service/app/core/: config.py  logger.py  storage.py
ingestion_service/app/domain/: article.py  repository.py  scraper.py
ingestion_service/app/repositories/: s3_repository.py
ingestion_service/app/scrapers/: arxiv_scraper.py
ingestion_service/app/services/: ingestion_service.py
ingestion_service/tests/: test_domain.py  test_ingestion.py  test_pagination.py  test_repository.py  test_scraper.py  test_storage.py
processing_service/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
processing_service/app/: main.py
processing_service/app/api/: routes.py
processing_service/app/core/: config.py  logger.py
processing_service/app/domain/: models.py  ports.py
processing_service/app/infrastructure/: bert_embedder.py  regex_cleaner.py  s3_repository.py
processing_service/app/services/: processor_service.py
processing_service/tests/: test_cleaner.py  test_repository.py  test_service.py
