[tool.poetry]
name = "frontend-service"
version = "0.3.0"
description = "Frontend Service - Busca Semântica com Streamlit"
authors = ["Seu Nome"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.32"
pandas = "^2.2"
boto3 = "^1.34"
pydantic = "^2.9"
pydantic-settings = "^2.6"
# ML para recriar embedding da query
torch = { version = "^2.2", source = "pytorch-cpu" }
transformers = "^4.39"
scikit-learn = "^1.4" # Para cosine_similarity
plotly = "^5.20"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
black = "^24.4"
ruff = "^0.4"
bump2version = "^1.0.1"
pre-commit = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
