[tool.poetry]
name = "ingestion-service"
version = "0.1.0"
description = "Ingestion Service - Camada Bronze"
authors = ["Seu Nome"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = "^0.30"
beautifulsoup4 = "^4.12"
boto3 = "^1.34"
pydantic = "^2.9"
pydantic-settings = "^2.6"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
bump2version = "^1.0.1"
pytest-asyncio = "^1.3.0"
pre-commit = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
