[tool.poetry]
name = "processing-service"
version = "0.2.0"
description = "Serviço de Processamento - Camada Silver (NLP + Embeddings)"
authors = ["Seu Nome"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = "^0.30"
pydantic = "^2.9"
pydantic-settings = "^2.6"
boto3 = "^1.34"
# ML & NLP
torch = { version = "^2.2", source = "pytorch-cpu" }
transformers = "^4.39"
numpy = "^1.26"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"
# NLTK removido para evitar downloads em rede na produção

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^1.3.0"
black = "^24.4"
ruff = "^0.4"
bump2version = "^1.0.1"
moto = "^5.0"
pre-commit = "^4.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
